messaging_app/messaging_app/blue_deployment.yaml
# blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app
          image: your-docker-image:2.0 # Updated version
          ports:
            - containerPort: 8000
