messaging_app/messaging_app/green_deployment.yaml
# green_deployment.yaml (representing the new version)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app
          image: your-docker-image:green-version
          ports:
            - containerPort: 8000
